# knots

./: .gitignore  CLAUDE.md  Makefile  README.md  prerequisites.sh  run.sh  run_all.sh
configs/: default.toml
cpp/: CMakeLists.txt
cpp/cmake/: FindOnnxRuntime.cmake
cpp/include/knots/: cli_options.hpp  cli_util.hpp  commands.hpp  geometry.hpp  inference.hpp  pipeline.hpp  stitching.hpp
cpp/src/: cli_options.cpp  cli_util.cpp  cmd_eval.cpp  cmd_gt_stitch.cpp  cmd_infer.cpp  cmd_run.cpp  eval.cpp  geometry.cpp  gt_stitch.cpp  infer.cpp  inference.cpp  main.cpp  pipeline.cpp  run.cpp  stitch.cpp  stitching.cpp
cpp/tests/: test_cli_util.cpp  test_geometry.cpp
docker/: Dockerfile.data  Dockerfile.fmt  Dockerfile.infer  Dockerfile.train
formatting/: .clang-format  ruff.toml
scripts/: analyze_dataset.py  board_features.py  compare.py  compare_boards.py  compare_frames.py  dataset_stats.py  eval_boards.py  eval_yolo.py  export_onnx.py  inspect_dataset.py  list_runs.py  make_splits.py  prepare.py  sam_polygons.py  stage_util.py  train_yolo.py  visualize_boards.py
scripts/tools/: compare.py  dataset_stats.py  eval_yolo.py  inspect_dataset.py  list_runs.py
